--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
@@ -22,7 +23,8 @@
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "vite-plugin-env-compatible": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
