--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,7 @@ SMTP_USER="85bc9a001@smtp-brevo.com"
 SMTP_PASS="qCcYwv3ZHE61XKUa"
 
 SENDER_EMAIL="vinaybuttala@gmail.com"
+
+
+RAZORPAY_KEY_ID="rzp_test_klU6Lq4H6d8e6Q"
+RAZORPAY_KEY_SECRET="LCewRg73l6bzJw9QUH6z0dkW"
