--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd ../client && npm run dev",
+    "client": "cd ../client && npm run dev -- --host",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "vinay",
