--- a/backend/.env
+++ b/backend/.env
@@ -13,3 +13,6 @@ SENDER_EMAIL="vinaybuttala@gmail.com"
 
 RAZORPAY_KEY_ID="rzp_test_klU6Lq4H6d8e6Q"
 RAZORPAY_KEY_SECRET="LCewRg73l6bzJw9QUH6z0dkW"
+
+GOOGLE_CLIENT_ID=945533594057-63j601h5709rracuum5tm1gtt0r9o1na.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
