--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,16 @@ MONGODB_URL='mongodb+srv://vinaybuttala:223344vinay@cluster0.5suz4.mongodb.net/?
 JWT_SECRET='scret#text'
 JWT_REFRESH_SECRET='secret#text'
 NODE_ENV='development'  
-
+FIREBASE_API_KEY=AIzaSyDe03YHbug-h2GjshnvI4gs4FuXRdaIqow
+FIREBASE_AUTH_DOMAIN=palmyra-edc38.firebaseapp.com
+FIREBASE_DATABASE_URL=https://palmyra-edc38-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID=palmyra-edc38
+FIREBASE_STORAGE_BUCKET=palmyra-edc38.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=945533594057
+FIREBASE_APP_ID=1:945533594057:web:63dca0dd734f5129de6018
+FIREBASE_MEASUREMENT_ID=G-P5PRFGT581
+FIREBASE_URL=users
+FIREBASE_COLLECTION=AmIewDOW747kvqkfhNE2
 
 SMTP_USER="85bc9a001@smtp-brevo.com"
 SMTP_PASS="qCcYwv3ZHE61XKUa"
@@ -16,3 +25,6 @@ RAZORPAY_KEY_SECRET="LCewRg73l6bzJw9QUH6z0dkW"
 
 GOOGLE_CLIENT_ID=945533594057-63j601h5709rracuum5tm1gtt0r9o1na.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+FIREBASE_URL=users
+FIREBASE_COLLECTION=AmIewDOW747kvqkfhNE2
