--- a/backend/.env
+++ b/backend/.env
@@ -20,8 +20,8 @@ SMTP_PASS="qCcYwv3ZHE61XKUa"
 SENDER_EMAIL="vinaybuttala@gmail.com"
 
 
-RAZORPAY_KEY_ID="rzp_test_klU6Lq4H6d8e6Q"
-RAZORPAY_KEY_SECRET="LCewRg73l6bzJw9QUH6z0dkW"
+RAZORPAY_KEY_ID="rzp_test_TL3JGps7ODJCAb"
+RAZORPAY_KEY_SECRET="YgqBNIGlCUikonoZN3pHTU87"
 
 GOOGLE_CLIENT_ID=945533594057-63j601h5709rracuum5tm1gtt0r9o1na.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
