--- a/backend/.env
+++ b/backend/.env
@@ -20,8 +20,8 @@ SMTP_PASS="qCcYwv3ZHE61XKUa"
 SENDER_EMAIL="vinaybuttala@gmail.com"
 
 
-RAZORPAY_KEY_ID="rzp_test_TL3JGps7ODJCAb"
-RAZORPAY_KEY_SECRET="YgqBNIGlCUikonoZN3pHTU87"
+RAZORPAY_KEY_ID="rzp_live_mLrARqGHCgc9o2"
+RAZORPAY_KEY_SECRET="0Vh4JCQ7GAvRUxNuOq9Su9vp"
 
 GOOGLE_CLIENT_ID=945533594057-63j601h5709rracuum5tm1gtt0r9o1na.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
