--- a/backend/.env
+++ b/backend/.env
@@ -22,6 +22,7 @@ SENDER_EMAIL="vinaybuttala@gmail.com"
 
 RAZORPAY_KEY_ID="rzp_live_mLrARqGHCgc9o2"
 RAZORPAY_KEY_SECRET="0Vh4JCQ7GAvRUxNuOq9Su9vp"
+RAZORPAY_WEBHOOK_SECRET=webhook_secret_223344vinay
 
 GOOGLE_CLIENT_ID=945533594057-63j601h5709rracuum5tm1gtt0r9o1na.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
